<resources>
    <string name="app_name">PacExchange</string>
    <string name="action_settings">Settings</string>

    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_profile">Profile</string>

    <string name="edit_profile_button_content_description">Edit Profile</string>
    <string name="profile_picture_content_description">User Profile Picture</string>

    <string name="graduation_year">Class of %s</string>
    <string name="reputation">%s Reputation Points</string>

    <string name="profile">Profile</string>
    <string name="inventory">Inventory</string>
    <string name="shop">Items for Sale</string>
    <string name="seller">Seller</string>
    <string name="item_type">Item Type</string>
    <string name="price">Price</string>
    <string name="seller_info">Seller Information</string>
    <string name="seller_colon">Seller:</string>
    <string name="item_type_colon">Item Type:</string>
    <string name="estimated_value">Estimated value:</string>
    <string name="place_holder">Placeholder</string>
    <string name="propose_trade">Propose Trade</string>
    <string name="back_button">Return to Offer List</string>

    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="signup_link">No account yet? Create one</string>
    <string name="login_button">Login</string>
    <string name="name_hint">Name</string>
    <string name="create_account_button">Create Account</string>
    <string name="login_link">Already a member? Login</string>
    <string name="phone_number_hint">Phone Number</string>
    <string name="grad_year_hint">Graduation Year</string>
    <string name="grad_year">Class of %d</string>
    <string name="sales_label">Sales</string>
    <string name="reputation_label">Reputation</string>
    <string name="items_label">Items</string>
    <string name="forgot_password_link">Forgot your password?</string>
    <string name="reset_password">Reset Password</string>
    <string name="back">Back</string>
    <string name="enter_registered_email">Please enter your registered email below:</string>
    <string name="label_forgot_password">Forgot Password?</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="register_button">Register</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="notifications_header">Notifications</string>
    <string name="password_header">Password</string>

    <!-- Messages Preferences -->
    <string name="password_title">Change Your Password</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="action_log_out">Log Out</string>

    <string name="seller_info">Seller Information</string>
    <string name="seller_colon">Seller:</string>
    <string name="item_type_colon">Item Type:</string>
    <string name="estimated_value">Estimated value:</string>
    <string name="place_holder">Placeholder</string>
    <string name="propose_trade">Propose Trade</string>
    <string name="back_button">Return to Offer List</string>
    <string name="btn_add_item">Add Item</string>

    <string-array name="category_array">
        <item>Books</item>
        <item>Tutoring</item>
        <item>Electronics</item>
        <item>Fashion</item>
        <item>Entertainment</item>
        <item>Software</item>
        <item>Office Products</item>
        <item>Other</item>
    </string-array>
</resources>
