<?xml version="1.0" encoding="utf-8"?>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:weightSum="10"
    android:layout_height="match_parent"
    android:layout_width="match_parent" >

    <LinearLayout
        android:orientation="horizontal"
        android:layout_height="0dp"
        android:layout_width="match_parent"
        android:layout_weight="1">

    <TextView
        android:layout_height="match_parent"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:textSize="20sp"
        android:textAlignment="center"
        android:text="@string/seller"
        android:gravity="center_vertical"/>

    <TextView
        android:layout_height="match_parent"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:textSize="20sp"
        android:textAlignment="center"
        android:text="@string/item_type"
        android:gravity="center_vertical"/>

    <TextView
        android:layout_height="match_parent"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:textSize="20sp"
        android:textAlignment="center"
        android:text="@string/price"
        android:gravity="center_vertical"/>

</LinearLayout>
<android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/list"
    android:name="com.cs639.pacexchange.ItemFragment"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="9"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    app:layoutManager="LinearLayoutManager"
    tools:context=".ItemFragment"
    tools:listitem="@layout/fragment_item" />
</LinearLayout>