<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="50dp"
        android:background="@color/colorPrimary" />

        <RelativeLayout
            android:id="@+id/linear_account"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="100dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="100dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="Profile Details"
                        android:textStyle="bold" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColorHint="@color/colorPrimary">

                        <EditText
                            android:id="@+id/edit_change_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/name_hint"
                            android:imeOptions="actionNext"
                            android:inputType="textPersonName"
                            android:textColorHint="@color/colorPrimary" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColorHint="@color/colorPrimary">

                        <EditText
                            android:id="@+id/edit_change_email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/email_hint"
                            android:imeOptions="actionNext"
                            android:inputType="textEmailAddress"
                            android:textColorHint="@color/colorPrimary" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColorHint="@color/colorPrimary">

                        <EditText
                            android:id="@+id/edit_change_phone_number"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/phone_number_hint"
                            android:imeOptions="actionNext"
                            android:inputType="phone"
                            android:textColorHint="@color/colorPrimary" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColorHint="@color/colorPrimary">

                        <EditText
                            android:id="@+id/edit_change_grad_year"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/grad_year_hint"
                            android:imeOptions="actionNext"
                            android:inputType="number"
                            android:textColorHint="@color/colorPrimary" />

                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true">

                <com.cs639.pacexchange.CircularImageView
                    android:id="@+id/imageview_account_profile"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/user_placeholder" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_alignEnd="@+id/imageview_account_profile"
                    android:layout_marginTop="10dp"
                    android:id="@+id/floatingActionButton"
                    android:src="@drawable/ic_edit_white_24dp" />

            </RelativeLayout>

        </RelativeLayout>

    <ImageButton
        android:id="@+id/discard_changes_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_close_black_24dp"
        android:layout_alignParentStart="true"
        android:layout_margin="15dp"/>

    <ImageButton
        android:id="@+id/save_changes_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_check_black_24dp"
        android:layout_alignParentEnd="true"
        android:layout_margin="15dp"/>

</RelativeLayout>