<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/graylight"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="405dp">

            <LinearLayout
                android:background="@color/colorPrimary"
                android:layout_width="match_parent"
                android:layout_height="350dp"
                android:orientation="vertical">
                <com.cs639.pacexchange.CircularImageView
                    android:id="@+id/imageview_account_profile"
                    android:layout_marginTop="45dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:src="@drawable/user_placeholder"/>

                <TextView
                    android:id="@+id/user_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:text="Wiliam Snoe"
                    android:textColor="#fff"
                    android:textSize="21sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/user_grad_year"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/grad_year"
                    android:textColor="#fff"
                    android:textStyle="bold" />
            </LinearLayout>

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/settings"
                android:background="@drawable/ic_settings_black_24dp"
                android:layout_alignParentEnd="true"
                android:layout_margin="15dp"/>

            <android.support.v7.widget.CardView
                android:layout_width="400dp"
                android:layout_height="120dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="275dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:weightSum="3">
                    <LinearLayout
                        android:gravity="center"
                        android:orientation="vertical"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="match_parent">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/items_label"
                            android:textSize="20sp" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="125"
                            android:textStyle="bold"
                            android:textSize="20sp"
                            android:paddingTop="10dp"
                            android:textColor="@color/colorPrimary"/>
                    </LinearLayout>

                    <LinearLayout
                        android:gravity="center"
                        android:orientation="vertical"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="match_parent">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/sales_label"
                            android:textSize="20sp"
                            />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="1205"
                            android:textStyle="bold"
                            android:textSize="20sp"
                            android:paddingTop="10dp"
                            android:textColor="@color/colorPrimary"/>

                    </LinearLayout>

                    <LinearLayout
                        android:gravity="center"
                        android:orientation="vertical"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="match_parent">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/reputation_label"
                            android:textSize="20sp" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="360"
                            android:textStyle="bold"
                            android:textSize="20sp"
                            android:paddingTop="10dp"
                            android:textColor="@color/colorPrimary"/>

                    </LinearLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="360dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:layout_marginTop="45dp">
            <LinearLayout
                android:orientation="horizontal"
                android:paddingStart="25dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:src="@drawable/ic_email_black_24dp"/>
                <TextView
                    android:id="@+id/user_email"
                    android:textStyle="bold"
                    android:layout_gravity="center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="20dp"
                    android:text="Wiliam@pace.edu"/>
            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="25dp"
                android:orientation="horizontal"
                android:paddingStart="25dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:src="@drawable/ic_phone_black_24dp"/>

                <TextView
                    android:id="@+id/user_phone_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:paddingStart="20dp"
                    android:text="+1 212 567 8901"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</ScrollView>